--- a/src/main/java/org/pantry/food/Reports.fxml
+++ b/src/main/java/org/pantry/food/Reports.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.controller.ReportsController">
+<AnchorPane fx:id="root" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pantry.food.controller.ReportsController">
    <children>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -30,7 +30,6 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
@@ -52,9 +51,8 @@
                      </children>
                   </HBox>
                   <RadioButton id="food.weight" mnemonicParsing="false" text="Donated Food Weight Report" toggleGroup="$radios" GridPane.rowIndex="1" />
-                  <RadioButton id="volunteer.hours" mnemonicParsing="false" text="Volunteer Hours" toggleGroup="$radios" GridPane.rowIndex="2" />
-                  <RadioButton id="volunteer.events" mnemonicParsing="false" text="Volunteer Events" toggleGroup="$radios" GridPane.rowIndex="3" />
-                  <RadioButton id="pantry.report" mnemonicParsing="false" text="Pantry Report Summary" toggleGroup="$radios" GridPane.rowIndex="4" />
+                  <RadioButton id="volunteer.events" mnemonicParsing="false" text="Volunteer Events" toggleGroup="$radios" GridPane.rowIndex="2" />
+                  <RadioButton id="pantry.report" mnemonicParsing="false" text="Pantry Report Summary" toggleGroup="$radios" GridPane.rowIndex="3" />
                </children>
                <VBox.margin>
                   <Insets left="20.0" />
@@ -65,17 +63,12 @@
             </GridPane>
             <HBox>
                <children>
-                  <Button id="saveReportBtn" fx:id="openBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Preview">
+                  <Button id="saveReportBtn" fx:id="openBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Open">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Button>
                   <Button id="printReportBtn" fx:id="printBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="Print">
-                     <HBox.margin>
-                        <Insets right="20.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button id="saveReportPdfBtn" fx:id="pdfBtn" focusTraversable="false" mnemonicParsing="false" styleClass="record-action" text="PDF">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
